# clash-mate

./: .editorconfig  .gitignore  CMakeLists.txt  compile_commands.json  go.mod  go.sum  main.cpp  main.go
cmake/: CMakeDetermineGoCompiler.cmake  golang.cmake
config/: config.go
qml/: CMakeLists.txt  app.cpp  app.go  app.h  bridge.cpp  bridge.hpp  compile_commands.json  const.go  viewer.cpp  viewer.go  viewer.h  viewer.hpp
res/: main.qml
src/: main.cpp
